# gr-apcma_sdr

./: .clang-format  .gitignore  CMakeLists.txt  MANIFEST.md  Readme.md  a.out  environment.yml  gr-apcma_sdr.code-workspace
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-apcma_sdrConfig.cmake
docs/: CMakeLists.txt  README.apcma_sdr
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: apcma_rx.grc  apcma_rx.py  apcma_rx_params_from_json.py  operation_chack.py  operation_check.grc  parameters.json
grc/: CMakeLists.txt  apcma_sdr_apcma_rx.block.yml  apcma_sdr_apcma_tx.block.yml
include/gnuradio/apcma_sdr/: CMakeLists.txt  apcma_rx.h  apcma_tx.h  api.h
lib/: CMakeLists.txt  apcma_rx_impl.cc  apcma_rx_impl.h  apcma_tx_impl.cc  apcma_tx_impl.h  mid_pulse_list.h  utilities.h
python/apcma_sdr/: CMakeLists.txt  __init__.py
python/apcma_sdr/bindings/: CMakeLists.txt  apcma_rx_python.cc  apcma_tx_python.cc  python_bindings.cc
python/apcma_sdr/bindings/docstrings/: apcma_rx_pydoc_template.h  apcma_tx_pydoc_template.h
test_program/: a.out  fft_time_measure.cc
